nightly build issue resolution