@@ -129,6 +129,8 @@ subprojects {
 
         compile group: 'uk.gov.hmcts.reform', name: 'properties-volume-spring-boot-starter', version: '0.0.4'
         implementation 'org.springframework.boot:spring-boot-starter-validation'
+
+        testCompile 'com.github.hmcts:fortify-client:1.2.1:all'
     }
 }
 
@@ -193,6 +195,12 @@ task smoke(type: GradleBuild, description: 'Runs smoke tests', group: 'Verificat
 task functional(type: GradleBuild, description: 'Runs Functional tests', group: 'Verification') {
     buildFile = './api/build.gradle'
     tasks = ['functionalTest']
+}
+
+task fortifyScan(type: JavaExec)  {
+    main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+    classpath += sourceSets.test.runtimeClasspath
+    jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
 }
 
 task printVersion {
